<resources>
    <string name="app_name">Mestero</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_bookings">Bookings</string>
    <string name="skip_txt">Skip</string>
    <string name="next_txt">Next</string>
    <string name="second_fragment_title">Post Your Service</string>
    <string name="second_fragment_txt">Share your skills and expertise by creating service listings that match your capabilities</string>
    <string name="third_fragment_title">Connect &amp; Collaborate</string>
    <string name="third_fragment_txt">Chat with service providers, discuss requirements, and get your projects done</string>
    <string name="publishimage_txt">Publish image</string>
    <string name="navigateimage_txt">Navigate Image</string>
    <string name="start_txt">Start</string>
    <string name="first_fragment_txt">Explore a wide range of services from trusted providers in your area</string>
    <string name="newsimage_text">newsImage</string>
    <string name="email_txt">Email</string>
    <string name="password_txt">Password</string>
    <string name="confirm_password_txt">Confirm password</string>
    <string name="no_account_txt"><u>Don\'t have an account? Create one</u></string>
    <string name="go_to_login_txt">Already have an account? Login</string>
    <string name="login_txt">Login</string>
    <string name="register_txt">Register</string>
    <string name="forgot_password_txt">Forgot Password ?</string>
    <string name="sign_up_txt">Sign up for a Free Account</string>
    <string name="must_be_completed_txt">All fields must be completed</string>
    <string name="firstname_txt">First Name</string>
    <string name="lastname_txt">Last Name</string>
    <string name="full_name_or_company_txt">First name or company name</string>
    <string name="company_name_txt">Company name</string>
    <string name="lastname_optional_txt">Last name (optional)</string>
    <string name="provider_helper_txt">If you are a service provider, you can add more profile details later. You may fill in optional fields now.</string>
    <string name="phone_optional_txt">Phone (optional)</string>
    <string name="location_optional_txt">Location (optional)</string>
    <string name="website_optional_txt">Website (optional)</string>
    <string name="country_txt">Country</string>
    <string name="date_txt">Date of Birth</string>
    <string name="submit_txt">Submit</string>
    <string name="search_txt">Search</string>
    <string name="filter_icon_txt">Filter Icon</string>
    <string name="see_more_txt"><![CDATA[see more>>]]></string>
    <string name="owned_crypto_title">Your crypto</string>
    <string name="back_button_txt">back button</string>
    <string name="first_fragment_title">Browse Services</string>
    <string name="your_total_amount_title">Your total amount</string>
    <string name="welcome_to_app">Welcome to Meștero</string>
    <string name="conversations">Conversations</string>
    <string name="search_services_hint">Search for services...</string>
    <string name="search_in_category_hint">Search in this category...</string>
    <string name="search_results_title">Search Results</string>
    <string name="no_search_results">No services found for "%1$s"</string>
    <string name="search_empty_query">Please enter a search term</string>
    <string name="category_home_improvement">Home Improvement &amp; Maintenance</string>
    <string name="category_automotive">Automotive Services</string>
    <string name="category_professional">Professional &amp; Business Services</string>
    <string name="category_outdoor">Outdoor &amp; Landscaping</string>
    <string name="category_creative">Creative &amp; Event Services</string>
    <string name="category_technical">Technical &amp; Skilled Trades</string>
    <string name="category_health">Health &amp; Medical Services</string>
    <string name="category_cleaning">Cleaning Services</string>
    <string name="category_personal_care">Personal Care &amp; Wellness</string>
    <string name="category_education">Education &amp; Tutoring</string>
    <string name="category_transportation">Transportation</string>
    <string name="category_childcare">Childcare &amp; Eldercare</string>
    <string name="category_pet">Pet Services</string>
    <string name="category_specialty">Specialty Services</string>
    <string name="subcategory_plumbing">Plumbing</string>
    <string name="subcategory_electrical">Electrical</string>
    <string name="subcategory_tiling">Tiling</string>
    <string name="subcategory_flooring">Flooring</string>
    <string name="subcategory_carpentry">Carpentry</string>
    <string name="subcategory_painting">Painting</string>
    <string name="subcategory_hvac">HVAC</string>
    <string name="subcategory_roofing">Roofing</string>
    <string name="subcategory_masonry">Masonry</string>
    <string name="subcategory_handyman">General Handyman</string>
    <string name="subcategory_auto_repair">Auto Repair</string>
    <string name="subcategory_detailing">Car Detailing</string>
    <string name="subcategory_towing">Towing &amp; Roadside Assistance</string>
    <string name="subcategory_customization">Customization</string>
    <string name="subcategory_legal">Legal Services</string>
    <string name="subcategory_accounting">Accounting &amp; Bookkeeping</string>
    <string name="subcategory_marketing">Marketing &amp; Advertising</string>
    <string name="subcategory_it">IT &amp; Tech Support</string>
    <string name="subcategory_consulting">Consulting</string>
    <string name="subcategory_admin">Administrative Support</string>
    <string name="subcategory_landscaping">Landscaping</string>
    <string name="subcategory_hardscaping">Hardscaping</string>
    <string name="subcategory_pest_control">Pest Control</string>
    <string name="subcategory_snow_removal">Snow Removal</string>
    <string name="subcategory_pool">Pool Maintenance</string>
    <string name="subcategory_photography">Photography</string>
    <string name="subcategory_videography">Videography</string>
    <string name="subcategory_event_planning">Event Planning</string>
    <string name="subcategory_music">Music &amp; Entertainment</string>
    <string name="subcategory_graphic_design">Graphic Design</string>
    <string name="subcategory_writing">Writing &amp; Editing</string>
    <string name="subcategory_welding">Welding</string>
    <string name="subcategory_machinery">Machinery Repair</string>
    <string name="subcategory_locksmith">Locksmith Services</string>
    <string name="subcategory_security">Security Installation</string>
    <string name="subcategory_home_health">Home Health Aide</string>
    <string name="subcategory_physical_therapy">Physical Therapy</string>
    <string name="subcategory_alternative">Alternative Medicine</string>
    <string name="subcategory_medical_transport">Medical Transport</string>
    <string name="subcategory_residential">Residential Cleaning</string>
    <string name="subcategory_commercial">Commercial Cleaning</string>
    <string name="subcategory_specialized">Specialized Cleaning</string>
    <string name="subcategory_eco_friendly">Eco-Friendly Cleaning</string>
    <string name="subcategory_organizing">Organizing Services</string>
    <string name="subcategory_hair">Hair Services</string>
    <string name="subcategory_nails">Nail Services</string>
    <string name="subcategory_spa">Spa &amp; Massage</string>
    <string name="subcategory_fitness">Fitness Training</string>
    <string name="subcategory_nutrition">Nutrition &amp; Diet</string>
    <string name="subcategory_wellness">Mental Wellness</string>
    <string name="subcategory_academic">Academic Tutoring</string>
    <string name="subcategory_language">Language Learning</string>
    <string name="subcategory_music_lessons">Music Lessons</string>
    <string name="subcategory_professional_skills">Professional Skills</string>
    <string name="subcategory_hobby">Hobby Classes</string>
    <string name="subcategory_ride">Ride Services</string>
    <string name="subcategory_delivery">Delivery Services</string>
    <string name="subcategory_moving">Moving Services</string>
    <string name="subcategory_logistics">Logistics</string>
    <string name="subcategory_babysitting">Babysitting</string>
    <string name="subcategory_nanny">Nanny Services</string>
    <string name="subcategory_elderly">Elderly Care</string>
    <string name="subcategory_special_needs">Special Needs Care</string>
    <string name="subcategory_grooming">Pet Grooming</string>
    <string name="subcategory_sitting">Pet Sitting &amp; Walking</string>
    <string name="subcategory_veterinary">Veterinary Services</string>
    <string name="subcategory_training">Pet Training</string>
    <string name="subcategory_staging">Home Staging</string>
    <string name="subcategory_eco">Eco-Friendly Services</string>
    <string name="subcategory_fabrication">Custom Fabrication</string>
    <string name="subcategory_spiritual">Spiritual Services</string>
    <string name="subcategory_repair">Repair Services</string>
    <string name="no_booking_requests_received">No booking requests received yet</string>
    <string name="no_booking_requests_sent">No booking requests sent yet</string>
    <string name="service_label">Service: %1$s</string>
    <string name="provider_professionalism_question">How was %1$s\'s professionalism and communication?</string>
    <string name="rating_required_message">Please provide at least one rating to submit a review</string>
    <string name="search_results_category">Results for "%1$s" in category "%2$s"</string>
    <string name="search_results_general">Results for "%1$s"</string>
    <string name="empty_message_input">Type a message...</string>
    <string name="language_title">Language</string>
    <string name="language_change_message">Language changed. Please restart the app to see all changes.</string>
    <string name="nav_home">Home</string>
    <string name="nav_search">Search</string>
    <string name="nav_bookings">Bookings</string>
    <string name="nav_messages">Messages</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_add_listing">Add Listing</string>
    <string name="my_listings_title">My Listings</string>
    <string name="new_posts_title">New Posts</string>
    <string name="most_popular_title">Most Popular</string>
    <string name="add_listing_title">Add New Listing</string>
    <string name="listing_title_hint">Listing Title</string>
    <string name="listing_description_hint">Description</string>
    <string name="listing_price_hint">Price</string>
    <string name="listing_location_hint">Location</string>
    <string name="listing_category_hint">Category</string>
    <string name="listing_subcategory_hint">Subcategory</string>
    <string name="add_photos">Add Photos</string>
    <string name="create_listing">Create Listing</string>
    <string name="update_listing">Update Listing</string>
    <string name="profile_details">Details</string>
    <string name="profile_beginner_level">Beginner Level</string>
    <string name="profile_edit_profile">Edit Profile</string>
    <string name="profile_logout">Logout</string>
    <string name="profile_settings">Settings</string>
    <string name="booking_status_pending">Pending</string>
    <string name="booking_status_accepted">Accepted</string>
    <string name="booking_status_completed">Completed</string>
    <string name="booking_status_rejected">Rejected</string>
    <string name="booking_status_cancelled">Cancelled</string>
    <string name="booking_action_accept">Accept</string>
    <string name="booking_action_reject">Reject</string>
    <string name="booking_action_complete">Complete</string>
    <string name="booking_action_hide">Hide</string>
</resources>