<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/navigation_my_services"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/my_listings_title" />

    <item
        android:id="@+id/navigation_add_listing"
        android:icon="@drawable/ic_add_green"
        android:title="@string/nav_add_listing" />

    <item
        android:id="@+id/navigation_bookings"
        android:icon="@drawable/ic_message"
        android:title="@string/nav_bookings" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_black_24dp"
        android:title="@string/nav_profile" />
</menu> 