<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <!-- Declare variables here if needed -->
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bluishWhite"
        tools:context=".introFragments.FirstFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/news_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_news_vector"
                android:layout_marginTop="80dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:contentDescription="@string/newsimage_text"/>

            <TextView
                android:id="@+id/news_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_fragment_title"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/news_img"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <TextView
                android:id="@+id/news_intro_description_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_fragment_txt"
                android:paddingHorizontal="5dp"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/news_title_tv"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <TextView
                android:id="@+id/first_skip_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skip_txt"
                android:layout_marginTop="80dp"
                android:layout_marginStart="50dp"
                android:textSize="20sp"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/news_intro_description_tv"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <Button
                android:id="@+id/first_next_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next_txt"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:background="@color/blue"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="50dp"
                app:layout_constraintTop_toBottomOf="@id/news_intro_description_tv"
                app:layout_constraintRight_toRightOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>
