<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <!-- Declare variables for ViewModel if needed -->
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bluishWhite">

        <TextView
            android:id="@+id/reset_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="Reset Intro"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:text="@string/welcome_to_app"
            android:textColor="@color/main_text_color2"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_email_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"

            app:boxCornerRadiusBottomEnd="8dp"

            android:paddingHorizontal="32dp"
            android:hint="@string/email_txt"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
            app:hintTextColor="@color/blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:paddingVertical="10dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/login_email_layout"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:boxBackgroundMode="outline"
            app:endIconMode="password_toggle"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"

            android:paddingHorizontal="32dp"
            android:hint="@string/password_txt"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
            app:hintTextColor="@color/main_text_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:paddingVertical="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="88dp"
            android:background="@drawable/rounded_background_disabled"
            android:text="@string/login_txt"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintHorizontal_bias="0.55"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_password_layout" />



        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"

            android:layout_marginStart="40dp"

            android:layout_marginTop="32dp"
            android:text="@string/forgot_password_txt"

            android:textAllCaps="false"
            android:textColor="@color/teal_700"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/login_password_layout"
            app:layout_constraintTop_toBottomOf="@id/login_password_layout" />

        <TextView
            android:id="@+id/no_acc_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:clickable="true"
            android:layout_marginStart="40dp"
            android:background="?attr/selectableItemBackground"

            android:layout_marginTop="32dp"
            android:focusable="true"
            android:text="@string/no_account_txt"

            android:textAllCaps="false"
            android:textColor="@color/teal_700"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/login_btn"
            app:layout_constraintTop_toBottomOf="@id/login_btn" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            android:indeterminateTint="@color/teal_700"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_btn"
            tools:visibility="visible" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
